# dativo-ingest

./: .gitignore  AIRFLOW_IMPLEMENTATION_SUMMARY.md  AI_CONNECTOR_PRIORITIES.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_INDEX.md  ARCHITECTURE_REVIEW_SUMMARY.md  AUDIO_EXPLANATION_README.md  CATALOG_FEATURE_SUMMARY.md  CATALOG_INTEGRATION_IMPLEMENTATION.md  CATALOG_INTEGRATION_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CLOUD_PLUGIN_IMPLEMENTATION_SUMMARY.md  COMPLETE_CHANGES_SUMMARY.md  CUSTOM_PLUGINS_IMPLEMENTATION.md  DATA_FLOW_ARCHITECTURE.md  DATA_FLOW_SUMMARY.txt  DBT_GENAI_QUICKSTART.md  DELIVERABLES_SUMMARY.md  DOCS_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENVIRONMENT_SETUP_GUIDE.md  EXPLICIT_TAGS_ONLY.md  FEATURE_SUMMARY.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  GENERATOR_QUICKSTART.md  GENERATOR_SUMMARY.md  GITHUB_ACTIONS_INTEGRATION.md  GIT_COMMIT_GUIDE.md  HOW_TO_GENERATE_AUDIO.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  IMPROVEMENTS_COMPLETE.md  INDUSTRY_COMPARISON_MATRIX.md  (+56 more)
.github/: CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  dependabot.yml
configs/: catalog_aws_glue.yaml  catalog_databricks.yaml  catalog_nessie.yaml  catalog_openmetadata.yaml  policy.yaml  runner.yaml  runner_airflow.yaml
connectors/: csv.yaml  gdrive_csv.yaml  gdrive_csv_airbyte.yaml  google_sheets.yaml  google_sheets_airbyte.yaml  hubspot.yaml  iceberg.yaml  markdown_kv.yaml  minio.yaml  mysql.yaml  postgres.yaml  s3.yaml  stripe.yaml
docs/: AIRFLOW_SUPPORT.md  CATALOG_INTEGRATION.md  CATALOG_INTEGRATIONS.md  CATALOG_LIMITATIONS.md  CATALOG_QUICKSTART.md  CLEANUP.md  COLIMA_CONFIGURATION.md  COMPLIANCE_OPERATIONS.md  CONFIG_REFERENCE.md  CONNECTOR_DEVELOPMENT.md  CONNECTOR_VS_PLUGIN_DECISION_TREE.md  CUSTOM_PLUGINS.md  DATA_CATALOG_INTEGRATION.md  DATA_CONTRACTS_AND_QUALITY.md  DBT_GENAI_INTEGRATION.md  DEVELOPER.md  ENHANCED_ROADMAP_SUMMARY.md  GENERATOR_CLI.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  INFRASTRUCTURE.md  INFRASTRUCTURE_INTEGRATION.md  INFRASTRUCTURE_MIGRATION_GUIDE.md  INFRASTRUCTURE_WORKFLOW.md  INGESTION_EXECUTION.md  LLM_IMPLEMENTATION_SUMMARY.md  LLM_METADATA_GENERATION.md  LLM_QUICKSTART.md  MARKDOWN_KV_STORAGE.md  MILESTONE_1_1_COMPLETE.md  MILESTONE_1_2_COMPLETE.md  MILESTONE_1_2_HANDOFF.md  MILESTONE_1_3_HANDOFF.md  MINIMAL_ASSET_EXAMPLE.md  ML_TEAMS_POSITIONING.md  MOUNT_POINTS_ANALYSIS.md  MVP_EXECUTION_PLAN.md  OPENMETADATA_INTEGRATION.md  ORCHESTRATION_ENHANCED.md  PLUGGABLE_READERS_CODE_EXAMPLES.md  (+32 more)
examples/: README.md  secret_manager_config.yaml
examples/plugins/rust/csv_reader/: Cargo.toml
examples/plugins/rust/csv_reader/src/: lib.rs
examples/plugins/rust/parquet_writer/: Cargo.toml
examples/plugins/rust/parquet_writer/src/: lib.rs
registry/: connectors.yaml
schemas/: connector_template.schema.json  connectors.schema.json  job-config.schema.json
scripts/: extract_job_metadata.py  generate-asset-template.sh  generate-job-template.sh  generate-test-data.sh  generate_terraform.py  load-minimal-adventureworks.sh  preflight-check.sh  setup-adventureworks-postgres.sh  setup-dev.sh  setup-mysql-test-db.sh  (+1 more)
(+563 files in other folders)
