[package]
name = "csv_reader_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "csv_reader_plugin"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
