[package]
name = "parquet_writer_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "parquet_writer_plugin"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
parquet = "54.2"
arrow = "51.0"
chrono = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
